# ai-playground

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  playground.sh
.github/: pull_request_template.md
.github/workflows/: ci.yaml
bazel/: init_deps.bzl  workspace.bzl
bazel/go/: deps.bzl
bazel/python/: requirements.txt
bazel/tools/: BUILD  CPPLINT.cfg  bazel.rc  cpplint.bzl
bazel/tools/format/: BUILD.bazel
deployment/backstage/: .gitignore  README.md  values.yaml
deployment/foxglove/: README.md  values.yaml
deployment/jupyterhub/: .gitignore  README.md  notebook.dockerfiles  singleuser.dockerfiles  values.yaml
deployment/kubeflow/: .gitignore  README.md
deployment/kuberay/: .gitignore  README.md  operator-values.yaml  values.yaml
deployment/mlflow/: .gitignore  README.md  values.yaml
deployment/stable-diffusion/: .gitignore  README.md  values.yaml
deployment/streamlit/: README.md  base.dockerfile
deployment/training-operator/: .gitignore  README.md  pytorch-example.yaml
deployment/wandb/: README.md  values.yaml
dev/: build.sh
dev/docker/: README.md  dev.buildfiles  dev.x86_64.dockerfile
experimental/arrow_example/: BUILD  arrow_example.cc
experimental/benchmark_example/: BUILD  string_bm.cc
experimental/clip_example/: README.md  clip_example.py
experimental/cpp_example/: BUILD  hello_greet.cc  hello_greet.h  hello_world.cc
experimental/cuda_example/: BUILD  README.md  (+5 more)
scripts/: cleanup_k8s_replicaset.sh  gdb_trace_threads.sh  genscp  go-clean-branches  kill-scripts.sh  playground.bashrc  pre-build.sh  sync-image.sh
(+66 files in other folders)
